<resources>
    <string name="app_name">Favorite Farm Championship</string>
    <string name="tb">tb</string>
    <string name="back">back</string>
    <string name="cbg">cbg</string>
    <string name="sp5bg">sp5bg</string>
    <string name="sp1bg">sp1bg</string>
    <string name="i1">i1</string>
    <string name="i4">i4</string>
    <string name="i7">i7</string>
    <string name="i10">i10</string>
    <string name="i13">i13</string>
    <string name="i2">i2</string>
    <string name="i5">i5</string>
    <string name="i8">i8</string>
    <string name="i11">i11</string>
    <string name="i14">i14</string>
    <string name="i3">i3</string>
    <string name="i6">i6</string>
    <string name="i9">i9</string>
    <string name="i12">i12</string>
    <string name="i15">i15</string>
    <string name="spin_1">Spin 1</string>
    <string name="spin_5">Spin 5</string>
    <string name="_5000_coins">5000 coins</string>
    <string name="btn_play">btn_play</string>
    <string name="btn_share">btn_share</string>
    <string name="btn_quit">btn_quit</string>
    <string name="play">Play</string>
    <string name="share_the_app">Share the app</string>
    <string name="quit">Quit</string>
    <string name="about_us">About US</string>
    <string name="close">Close</string>
    <string name="back_">Back</string>
    <string name="txt_tv_aaa">\"Favorite Farm Championship\" is a delightful slots game created by the talented Thomas Martinez. Step into a charming farm setting filled with colorful graphics and lively chickens that serve as adorable stickers on the reels. Spin your way to exciting wins while enjoying the cheerful atmosphere of this engaging game. With its playful theme and engaging gameplay, \"Favorite Farm Championship\" promises hours of entertainment for players of all ages. Join the feathered fun and see if you can become the ultimate champion of the farm!</string>
    <string name="tv_tx_htols">To play \"Favorite Farm Championship,\" follow these simple steps:  \n1.Bet Selection: Start by choosing your preferred bet amount using the controls provided.
        \n2.Spin the Reels: Hit the \'Spin\' button to set the reels in motion. Watch as the charming chicken stickers dance across the screen.
        \n3.Winning Combinations: Keep an eye out for matching symbols on the reels. Different combinations offer varying payouts.
        \n4.Special Features: Look for bonus symbols or special features like free spins and multipliers that can boost your winnings.
        \n5.Autoplay (Optional): If you prefer, you can use the \'Autoplay\' feature to let the game spin the reels automatically for a set number of rounds.
        Enjoy the Game: Sit back, relax, and immerse yourself in the delightful farm atmosphere as you aim for exciting wins!
        \n\n
        Remember, \"Favorite Farm Championship\" is all about luck, so have fun and may the chickens bring you good fortune!</string>
</resources>