<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg_spinnerrr"
    tools:context="farm.favbet.game.fovorit.MainActivity" >

    <ImageView
        android:id="@+id/tb"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:adjustViewBounds="true"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintWidth_percent="0.7"
        app:srcCompat="@drawable/table"
        android:contentDescription="@string/tb" />

    <ImageView
        android:id="@+id/back"
        android:layout_width="50dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:adjustViewBounds="true"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/back"
        android:contentDescription="@string/back" />

    <ImageView
        android:id="@+id/cbg"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:adjustViewBounds="true"
        app:layout_constraintBottom_toBottomOf="@+id/sp1bg"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/sp1bg"
        app:layout_constraintTop_toTopOf="@+id/sp1bg"
        app:srcCompat="@drawable/bt_1"
        android:contentDescription="@string/cbg" />

    <ImageView
        android:id="@+id/sp5bg"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:adjustViewBounds="true"
        app:layout_constraintBottom_toBottomOf="@+id/sp1bg"
        app:layout_constraintEnd_toStartOf="@+id/sp1bg"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/sp1bg"
        app:srcCompat="@drawable/bt_1"
        android:contentDescription="@string/sp5bg" />

    <ImageView
        android:id="@+id/sp1bg"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:adjustViewBounds="true"
        app:layout_constraintEnd_toStartOf="@+id/cbg"
        app:layout_constraintStart_toEndOf="@id/sp5bg"
        app:layout_constraintTop_toBottomOf="@+id/tb"
        app:srcCompat="@drawable/bt_1"
        android:contentDescription="@string/sp1bg" />

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="8dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="@+id/tb"
        app:layout_constraintEnd_toEndOf="@+id/tb"
        app:layout_constraintStart_toStartOf="@+id/tb"
        app:layout_constraintTop_toTopOf="@+id/tb">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/i1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                app:srcCompat="@drawable/clever"
                tools:ignore="NestedWeights"
                android:contentDescription="@string/i1" />

            <ImageView
                android:id="@+id/i4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                app:srcCompat="@drawable/clever"
                android:contentDescription="@string/i4" />

            <ImageView
                android:id="@+id/i7"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                app:srcCompat="@drawable/clever"
                android:contentDescription="@string/i7" />

            <ImageView
                android:id="@+id/i10"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                app:srcCompat="@drawable/clever"
                android:contentDescription="@string/i10" />

            <ImageView
                android:id="@+id/i13"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                app:srcCompat="@drawable/clever"
                android:contentDescription="@string/i13" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/i2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                app:srcCompat="@drawable/clever"
                tools:ignore="NestedWeights"
                android:contentDescription="@string/i2" />

            <ImageView
                android:id="@+id/i5"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                app:srcCompat="@drawable/clever"
                android:contentDescription="@string/i5" />

            <ImageView
                android:id="@+id/i8"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                app:srcCompat="@drawable/clever"
                android:contentDescription="@string/i8" />

            <ImageView
                android:id="@+id/i11"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                app:srcCompat="@drawable/clever"
                android:contentDescription="@string/i11" />

            <ImageView
                android:id="@+id/i14"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                app:srcCompat="@drawable/clever"
                android:contentDescription="@string/i14" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/i3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:contentDescription="@string/i3"
                app:srcCompat="@drawable/clever"
                tools:ignore="NestedWeights,ImageContrastCheck" />

            <ImageView
                android:id="@+id/i6"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                app:srcCompat="@drawable/clever"
                android:contentDescription="@string/i6" />

            <ImageView
                android:id="@+id/i9"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                app:srcCompat="@drawable/clever"
                android:contentDescription="@string/i9" />

            <ImageView
                android:id="@+id/i12"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                app:srcCompat="@drawable/clever"
                android:contentDescription="@string/i12" />

            <ImageView
                android:id="@+id/i15"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                app:srcCompat="@drawable/clever"
                android:contentDescription="@string/i15" />
        </LinearLayout>
    </LinearLayout>

    <TextView
        android:id="@+id/t1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="sans-serif-black"
        android:text="@string/spin_1"
        android:textColor="#000000"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="@+id/sp1bg"
        app:layout_constraintEnd_toEndOf="@id/sp1bg"
        app:layout_constraintStart_toStartOf="@id/sp1bg"
        app:layout_constraintTop_toTopOf="@+id/sp1bg" />

    <TextView
        android:id="@+id/t5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="sans-serif-black"
        android:text="@string/spin_5"
        android:textColor="#000000"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="@+id/sp5bg"
        app:layout_constraintEnd_toEndOf="@+id/sp5bg"
        app:layout_constraintStart_toStartOf="@+id/sp5bg"
        app:layout_constraintTop_toTopOf="@+id/sp5bg" />

    <TextView
        android:id="@+id/coins"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="sans-serif-black"
        android:text="@string/_5000_coins"
        android:textColor="#000000"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="@+id/cbg"
        app:layout_constraintEnd_toEndOf="@+id/cbg"
        app:layout_constraintStart_toStartOf="@+id/cbg"
        app:layout_constraintTop_toTopOf="@+id/cbg" />
</androidx.constraintlayout.widget.ConstraintLayout>